# sparse-memo-trie

./: .gitignore  LICENSE  sparse-memo-trie.cabal
app/: Main.hs
bench/: Main.hs
src/: Lib.hs  SparseInt.hs
test/: Spec.hs
