name:                sparse-memo-trie
version:             0.1.0.0
synopsis:            Experimentation with sparse memoization.
description:         Memoization using sparse tries.
homepage:            https://github.com/gmalecha/sparse-memo-trie
license:             BSD3
license-file:        LICENSE
author:              Gregory Malecha
maintainer:          gmalecha@gmail.com
copyright:           Gregory Malecha
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , SparseInt
  build-depends:       base >= 4.7 && < 5
                     , atomic-primops
  ghc-options: -O2
  default-language:    Haskell2010

executable sparse-memo-trie-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , sparse-memo-trie
                     , criterion
                     , MemoTrie
  default-language:    Haskell2010

test-suite sparse-memo-trie-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , parallel
                     , tasty
                     , tasty-hunit
                     , sparse-memo-trie
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark sparse-memo-trie-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base
                     , sparse-memo-trie
                     , criterion
                     , MemoTrie
                     , parallel
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gmalecha/sparse-memo-trie
